--- a/index.Rmd
+++ b/index.Rmd
@@ -12,5 +12,16 @@ github-repo: MetaDocencia/StartupKit
 description: "Versión beta Kit con documentación y guias para crear tu propia MetaDocencia"
 ---
 
-# Versión beta
+# Introducción
+
+## Quién eres
+
+Esta guía tiene como objetivo presentar y enseñar el proceso que llevamos adelante para crear y desarrollar MetaDocencia. Cada sección de este kit tiene como objetivo satisfacer las necesidades de personas específicas, estas cuatro personas que se describen a continuación definen la audiencia prevista para este libro:
+
+* **Natalia**: es docente universitaria, se encontró con la necesidad de llevar sus clases on-line debido a la pandemia y encontró los cursos de MetaDocencia.  Luego de tomar el Intro al ABC quedó muy entusiasmada por la idea de una comunidad docente en la cual seguir apoyandose y participando, por eso quiere ser voluntaria y ayudar de alguna manera a que esta comunidad continúe desarrollandose.  Natalia va a usar el kit como apoyo para conocer más detalles sobre el fucionamiento y los roles de MetaDocencia.
+
+* **Paulo**: es parte de la comunidad R en Latinoamérica, enseña R en los Grupos de Usuarios del lenguage y en su empresa. Conoció MetaDocencia en una conferencia regional donde tomó uno de los cursos y quiere replicar la experiencia del cursos en su propia comunidad y trabajo.  Paulo va a usar el kit para aprender como mejorar sus propios procesos de enseñanza, teniendo en cuenta aspectos como la accesibilidad, el preregistro, el feedback y usando los templates presentados en el kit.
+
+* **Samira**: es docente en un país del sur global, donde el inglés también es una barrera para acceder al conocimiento y muchas de las prácticas de enseñanza basada en evidencia no son aplicadas ampliamente en todos los ámbitos educativos.  Al igual que las personas que hacen MetaDocencia es investigadora y docente y quiere replicar MetaDocencia en su país y en su idioma nativo porque entiende que hay una necesidad de este tipo de comunidades de práctica.  Usará el kit para aprender como fue el proceso de crear MetaDocencia, lo aplicará y adaptará para crear un MetaDocencia en su país.
+
 
